[tool.poetry]
name = "ios-extract"
version = "0.1.0"
description = ""
authors = ["JP Verkamp <me@jverkamp.com>"]
readme = "README.md"
packages = [{include = "ios_extract"}]

[tool.poetry.dependencies]
python = "^3.10"
coloredlogs = "^15.0.1"
phonenumbers = "^8.13.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
